--- a/PCRBattleRecorder/PCRBattleRecorder.csproj
+++ b/PCRBattleRecorder/PCRBattleRecorder.csproj
@@ -65,6 +65,7 @@
       <HintPath>..\packages\OpenCvSharp3-AnyCPU.4.0.0.20181129\lib\net461\OpenCvSharp.UserInterface.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -95,6 +96,8 @@
     <Compile Include="LogTools.cs" />
     <Compile Include="MumuTools.cs" />
     <Compile Include="OCRTools.cs" />
+    <Compile Include="OpenCvTools.cs" />
+    <Compile Include="PCRTools.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="T.cs" />
