--- a/PCRArenaSearchScript/PCRArenaSearchScript.csproj
+++ b/PCRArenaSearchScript/PCRArenaSearchScript.csproj
@@ -55,6 +55,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -64,6 +66,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArenaSearchScript.cs" />
+    <Compile Include="PlayerInfoInputDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PlayerInfoInputDialog.Designer.cs">
+      <DependentUpon>PlayerInfoInputDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -74,6 +82,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="PlayerInfoInputDialog.resx">
+      <DependentUpon>PlayerInfoInputDialog.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
