--- a/PCRBattleRecorder/App.config
+++ b/PCRBattleRecorder/App.config
@@ -6,4 +6,7 @@
     <System.Windows.Forms.ApplicationConfigurationSection>
         <add key="DpiAwareness" value="PerMonitorV2"/>
     </System.Windows.Forms.ApplicationConfigurationSection>
+    <runtime>
+        <loadFromRemoteSources enabled="true"/>
+    </runtime>
 </configuration>
