--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 /PCRTemplateImgTool/obj
 /PCRArenaSearchScript/bin
 /PCRArenaSearchScript/obj
+/PCRBattleScripts/bin
+/PCRBattleScripts/obj
 /PCRPluginTest/bin
 /PCRPluginTest/obj
 /PackTools/bin
