--- a/PCRBattleScripts/PCRBattleScripts.csproj
+++ b/PCRBattleScripts/PCRBattleScripts.csproj
@@ -65,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UndergroundBattleScript.cs" />
     <Compile Include="StagelineBattleScript.cs" />
   </ItemGroup>
   <ItemGroup>
