--- a/PCRPluginScripts/PCRPluginScripts.csproj
+++ b/PCRPluginScripts/PCRPluginScripts.csproj
@@ -67,6 +67,7 @@
   <ItemGroup>
     <Compile Include="ActLikabilityScript.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StoryScript.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PCRTools\PCRTools.csproj">
